--- a/public/views/partials/transactionsList.html
+++ b/public/views/partials/transactionsList.html
@@ -10,16 +10,16 @@
                 <th>Date</th>
             </thead>
             <tr ng-repeat="transaction in transactions" >
-                <td ng-show="transaction.type=='bet'" >
+                <td ng-show="transaction.type=='Bet'" >
                     Pari sur <i>@@ transaction.bet.game.team1.name @@ - @@ transaction.bet.game.team2.name @@</i>
                 </td>
-                <td ng-show="transaction.type=='gain'" >
+                <td ng-show="transaction.type=='Gain'" >
                     Gains sur <i>@@ transaction.bet.game.team1.name @@ - @@ transaction.bet.game.team2.name @@</i>
                 </td>
-                <td ng-show="transaction.type=='bet'" >
+                <td ng-show="transaction.type=='Bet'" >
                     <font color="red" >- @@ transaction.value @@ points</font>
                 </td>
-                <td ng-show="transaction.type=='gain'" >
+                <td ng-show="transaction.type=='Gain'" >
                     <font color="green" >+ @@ transaction.value @@ points</font>
                 </td>
                 <td>
